fix view issues with text wraparound

--- a/css/style.css
+++ b/css/style.css
@@ -571,10 +571,12 @@ button:hover {
 
 #viewVerticalSpace {
 	margin-top: 40px;
+  width: 85%;
 }
 
 #viewVerticalSpaceVeryLow {
 	margin-top: 20px;
+  width: 85%;
 }
 
 #viewHeaderBox {
@@ -587,6 +589,7 @@ button:hover {
 	margin-right: 6px;
 	font-weight: bold;
 	font-size: 18px;
+  text-align: left;
 }
 
 #viewAns {
@@ -635,6 +638,7 @@ button:hover {
 
 #shortSpaceView {
 	margin-top: 7px;
+  width: 85%
 }
 
 #adjust-right-textField {
